--- a/index.html
+++ b/index.html
@@ -233,13 +233,12 @@
     <h2>Parents First</h2>
     <p>We understand the early years can be both hard and beautiful. That’s why we create easy-to-use digital tools for parents of children aged 2 to 6.</p>
 
-    <h2>our mission</h2>
+    <h2>Our Mission</h2>
     <p>We want to help families feel confident and cared for by offering helpful and loving digital experiences.</p>
 
     <h2>What We Offer</h2>
     <p class="last-paragraph">Our app has fun activities and resources designed to support children’s growth and family wellbeing.</p>
   </section>
-
   <section class="cta">
     <p>All of these in our exclusive app, download it now!</p>
     <a href="#">Download Now!</a>
