--- a/index.html
+++ b/index.html
@@ -240,9 +240,12 @@
     <p class="last-paragraph">Our app has fun activities and resources designed to support children’s growth and family wellbeing.</p>
   </section>
   <section class="cta">
-    <p>All of these in our exclusive app, download it now!</p>
-    <a href="#">Download Now!</a>
-  </section>
+    <p>All of these are in our exclusive app, download it now!</p>
+    <section class="cta">
+  <a href="https://play.google.com/store/apps/details?id=seuapp" target="_blank" rel="noopener" style="background: var(--highlight); color: white; padding: 1rem 2rem; border-radius: 1rem; font-family: 'Chewy', cursive; font-size: 1.3rem; display: inline-block; text-decoration: none;">
+    Download Now!
+  </a>
+</section>
 
   <section class="events-list">
     <h2>Events</h2>
